# LatticeBench

./: Cargo.toml  LICENSE-MIT  dhat-heap.json  memory_results.json  prove_results.json  swifft_cost_breakdown.json  trace_results.json
benches/: hash_bench.rs
dashboard/: app.py
src/: lib.rs  sha256.rs
src/swifft/: mod.rs  naive.rs  ntt.rs  simd.rs
