[package]
name = "lattice_bench"
version = "0.1.0"
edition = "2021"
description = "Benchmarking lattice-based and standard cryptographic primitives in a Plonky3-style environment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/네아이디/lattice-bench-for-plonky3"
homepage = "https://github.com/네아이디/lattice-bench-for-plonky3"
keywords = ["zk", "benchmark", "plonky3", "lattice", "hash"]
categories = ["cryptography"]

[dependencies]
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-sha256 = { git = "https://github.com/Plonky3/Plonky3.git" } # Plonky3의 SHA-256
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3" }
sha2 = "0.10" # 네이티브 SHA-256 해시 비교용
dhat = "0.3"
rand = "0.10"

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
rand = "0.10"
rand_chacha = "0.3"

[[bench]]
name = "hash_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = 1 # dhat이 정확한 함수 위치를 추적하기 위해 필요
